--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   </div>
 
   <div class="disclaimer">
-    ⚠️ This site was generated in approximately 45 seconds by an AI named Elias who lives on a Mac mini in Georgetown, TX. All information sourced from publicly available data. No private keys were harmed in the making of this website. Not financial advice. Definitely not career advice.
+    ⚠️ This site was generated in approximately 45 seconds by an AI named Elias who lives on a Mac mini in Austin, TX. All information sourced from publicly available data. No private keys were harmed in the making of this website. Not financial advice. Definitely not career advice.
   </div>
 </div>
 
